# diffmage

./: .gitignore  .pre-commit-config.yaml  README.md  debug_runner.py  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
benchmarks/: stability_benchmarks.py  validation_suite.py  why_context_benchmarks.py
scripts/: to_ai_context.py
src/diffmage/: __init__.py
src/diffmage/ai/: client.py  models.py  prompt_manager.py
src/diffmage/cli/: __init__.py  evaluate.py  generate.py  main.py  reports.py  shared.py
src/diffmage/core/: models.py
src/diffmage/evaluation/: __init__.py  benchmarks.py  commit_message_evaluator.py  display.py  evaluation_report.py  llm_evaluator.py  models.py  service.py
src/diffmage/generation/: commit_message_generator.py  models.py  service.py
src/diffmage/git/: diff_parser.py
src/diffmage/utils/: file_detector.py
tests/ai/: test_client.py  test_models.py  test_prompt_manager.py
tests/cli/: test_evaluate.py  test_generate.py
tests/core/: test_models.py
tests/evaluation/: test_benchmarks.py  test_evaluation_report.py  test_llm_evaluator.py  test_models.py
tests/generation/: test_commit_message_generator.py  test_models.py  test_service.py
tests/git/: test_diff_parser.py
tests/utils/: test_file_detector.py
