[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[project]
name = "diffmage"
version = "0.3.2"
description = "AI-powered git commit message generator with semantic analysis"
readme = "README.md"
authors = [
  {name = "Nick Galluzzo", email = "n.galluzzo@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
  "typer>=0.9.0",
  "rich>=13.7.0",
  "pydantic>=2.5.0",
  "python-magic>=0.4.27",
  "GitPython>=3.1.0",
  "unidiff>=0.7.0",
  "litellm>=1.74.9.post1",
]

[project.scripts]
diffmage = "diffmage.cli.main:app"

[tool.uv]
dev-dependencies = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.11.0",
  "pytest-asyncio>=0.21.0",
  "ruff>=0.1.0",
  "mypy>=1.5.0",
  "types-unidiff",
  "debugpy>=1.8.0",
  "pre-commit>=4.2.0",
]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src/", "tests/"]
show_error_codes = true
show_column_numbers = true
show_error_context = true
incremental = true
cache_dir = ".mypy_cache"


[[tool.mypy.overrides]]
module = ["debugpy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
